[package]
name = "rust-tink"
version = "0.1.0"
authors = ["jonross"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bins]]
path = "src/scratch.rs"

[dependencies]
fixed = "1.9"
fixed-macro = "1.1.1"
#lazycell = "1.3.0"
#dynamic-pool = "0.2.2"
#object-pool = "0.5.4"
once_cell = "1.7.2"